# sepb

./: .gitignore  LICENSE.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: config.yml
ai/: README.md  ai.sh  pyproject.toml
ai/src/camera/: README.md  camera_capture.py  camera_lens.py
ai/src/data_processing/: README.md  case_position.py  chip_position.py  image_processing.py  tray_position.py
ai/src/models/: README.md  object_detection_model.py
ai/src/samples/: README.md  basic_sample.py  camera_inference_sample.py  camera_inference_sample.yaml  camera_sample.py  sample_config.yaml  yolov5_sample.py
ai/src/scripts/: README.md  copy_interval.py  dataset_balancer.py  define_crop.py  random_crop.py
ai/src/tests/: case_position_test.py  chip_position_test.py  tray_position_test.py
ai/src/training/: README.md  object_detection_training.ipynb
ai/src/util/: README.md
assessments/: criteria.md  evaluation.md  lsr.md  review_template.md  technical.md  test_plan.md  test_report.md  transcript.md  usability.md
assessments/sepa/: design.md  plan.md  sadrr.md  sqap.md  srs.md
bash/: README.md  ai.sh  cobot.sh  path.sh  setup.sh  variables.sh
cobot/: README.md  cobot.sh  positions.csv  ur5e_fof_calibration.yaml
cobot/src/pick_place_interfaces/: CMakeLists.txt  README.md  setup.cfg  setup.py
cobot/src/pick_place_interfaces/action/: PickPlaceAction.action
collab/: ZED_camera_stuff.info  ZED_camera_stuff.info.md  object-detection-training.ipynb  yolov5-cropped-chip-detect.ipynb  yolov5-uncropped-chip-detect.ipynb
cpp_pubsub/: CMakeLists.txt  package.xml
cpp_pubsub/src/: publisher_member_function.cpp
data-processing/: crop.py  readme.md  slice.py
gripper/: README.md
gripper/onrobot/: CMakeLists.txt
gripper/onrobot_rg_control/: CMakeLists.txt  package.xml
gripper/onrobot_rg_modbus_tcp/: CMakeLists.txt
gripper/src/onrobot/: CMakeLists.txt  package.xml  setup.py
gripper/src/onrobot_rg_control/: CMakeLists.txt  setup.cfg  setup.py
gripper/src/onrobot_rg_control/launch/: rg2_launch.py  server_launch.py
gripper/src/onrobot_rg_modbus_tcp/: CMakeLists.txt  package.xml  setup.cfg  setup.py
gripper/src/onrobot_rg_modbus_tcp/onrobot_rg_modbus_tcp/: rg2_modbus.py
gripper/src/onrobot_rg_msgs/: CMakeLists.txt  package.xml  setup.py
gripper/src/onrobot_rg_msgs/msg/: OnRobotRGOutput.msg
minutes/: minutes 22082023.md  minutes 29082022.md  minutes03102023.md  minutes05092023.md  minutes08082023.md  minutes10102023.md  minutes12092023.md  minutes15082023.md  minutes17102023.md  minutes19092023.md  minutes24102023.md  minutes26092023.md  minutes29082022.md  minutes_080823.md  minutes_template.md
models/: yolov5_tiled_predict.py
models/cpp/: CMakeLists.txt  build.md
moveit/: positions.csv  positions_rads.csv  setup.md
moveit/cobot/: CMakeLists.txt  package.xml
moveit/demo_project/: CMakeLists.txt  package.xml
moveit/hello_moveit/: CMakeLists.txt  package.xml
onrobot_grippers-main/: README.md
onrobot_grippers-main/onrobot/: CMakeLists.txt  setup.cfg  setup.py
onrobot_grippers-main/onrobot_rg_control/: CMakeLists.txt  package.xml  setup.py
onrobot_grippers-main/onrobot_rg_control/config/: rg2_control_params.yaml
onrobot_grippers-main/onrobot_rg_control/launch/: bringup.launch.py  bringup_server.launch.py
onrobot_grippers-main/onrobot_rg_control/nodes/: OnRobotRGSimpleController.py  OnRobotRGSimpleControllerServer.py  OnRobotRGStatusListener.py  OnRobotRGTcpNode.py
onrobot_grippers-main/onrobot_rg_control/onrobot_rg_control/: baseOnRobotRG.py
onrobot_grippers-main/onrobot_rg_description/: CMakeLists.txt  README.md  setup.cfg  setup.py
onrobot_grippers-main/onrobot_rg_gazebo/: CMakeLists.txt  setup.cfg  setup.py
onrobot_grippers-main/onrobot_rg_modbus_tcp/: CMakeLists.txt  package.xml  setup.py
onrobot_grippers-main/onrobot_rg_modbus_tcp/onrobot_rg_modbus_tcp/: comModbusTcp.py
onrobot_grippers-main/onrobot_rg_msgs/: CMakeLists.txt  package.xml  setup.cfg  setup.py
onrobot_grippers-main/onrobot_vg_description/: CMakeLists.txt  package.xml
onrobot_grippers-main/src/: README.md
onrobot_grippers-main/src/onrobot/: package.xml
onrobot_grippers-main/src/onrobot_rg_description/: CMakeLists.txt  README.md  package.xml
onrobot_grippers-main/src/onrobot_rg_description/urdf/: onrobot_rg2.xacro  onrobot_rg2_model_macro.xacro
onrobot_grippers-main/src/onrobot_rg_msgs/: CMakeLists.txt  package.xml
pos/: positions_degs.csv  positions_rads.csv
robot_movement_test/: package.xml  setup.cfg  setup.py
robot_movement_test/config/: test_goal_publishers_config.yaml
robot_movement_test/launch/: test_joint_trajectory_controller.launch.py  test_scaled_joint_trajectory_controller.launch.py
robot_movement_test/robot_movement_test/: publisher_position_trajectory_controller.py
src/: README.md  pyproject.toml  requirements.txt  setup.py
src/camera/: README.md  __init__.py  camera_capture.py  camera_lens.py
src/data_processing/: README.md  Tray_Pos.py  __init__.py  box_pos.py  box_position.py  calculate_training_ratio_roboflow.py  camera_capture.py  camera_config.yaml  case_position.py  chip_position.py  convert_case.py  copy_by_interval.ps1  crop.py  image_processing.py  random_crop.py  readme.md  rename.ps1  slice.py  tray_position.py
src/models/cpp/: CMakeLists.txt  build.md  main.cpp
src/notebooks/: object_detection_training.ipynb  object_detection_training.py  plot_ultralytics_results.py
src/tests/: case_position_test.py  chip_position_test.py  tray_position_test.py
src/training/: README.md  object_detection_training.ipynb  object_detection_training.py  plot_ultralytics_results.py
src/util/: README.md  __init__.py  cli_runner.py  file_dialog.py  file_reader.py  package_install.py
state_publisher_cpp/launch/: state_publisher_setup.launch.py
styles/: lsr.css  pdf.css  styles.css  worklog.css
worklogs/: worklog04092023-24092023.md  worklog25092023-22102023.md  worklog31072023-03092023.md  worklog_template.md
ws/: README.md  init_ros.sh  rebuild.sh
(+103 files in other folders)
