<?xml version="1.0"?>
<package format="3">
  <name>onrobot_rg_control</name>
  <version>1.0.0</version>
  <description>Package to control an OnRobot RG gripper</description>
  <maintainer email="kiyokawa@hlab.sys.es.osaka-u.ac.jp">Takuya Kiyokawa</maintainer>
  <author email="kiyokawa@hlab.sys.es.osaka-u.ac.jp">Takuya Kiyokawa</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>onrobot_rg_msgs</build_depend>
  <build_depend>onrobot_rg_modbus_tcp</build_depend>
  <build_depend>rclpy</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>