<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>onrobot</name>
	<version>0.0.0</version>
	<description>ROS drivers for OnRobot grippers</description>
	<maintainer email="63185643+dau501@users.noreply.github.com">cobot</maintainer>
	<license>TODO: License declaration</license>

	<buildtool_depend>ament_cmake_python</buildtool_depend>
	<buildtool_depend>ament_cmake</buildtool_depend>

	<exec_depend>onrobot_rg_modbus_tcp</exec_depend>
	<exec_depend>onrobot_rg_control</exec_depend>
</package>
