<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>onrobot_rg_msgs</name>
	<version>0.0.0</version>
	<description>Package containing messages to control an OnRobot RG gripper</description>
	<maintainer email="63185643+dau501@users.noreply.github.com">cobot</maintainer>
	<license>TODO: License declaration</license>

	<buildtool_depend>ament_cmake_python</buildtool_depend>
	<buildtool_depend>ament_cmake</buildtool_depend>
	<buildtool_depend>rosidl_default_generators</buildtool_depend>

	<build_depend>std_msgs</build_depend>

	<exec_depend>rosidl_default_runtime</exec_depend>
	<exec_depend>std_msgs</exec_depend>

	<member_of_group>rosidl_interface_packages</member_of_group>

	<export>
		<build_type>ament_python</build_type>
	</export>
</package>
