<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>onrobot</name>
	<version>0.0.0</version>
	<description>ROS drivers for OnRobot grippers</description>
	<maintainer email="63185643+dau501@users.noreply.github.com">cobot</maintainer>
	<license>TODO: License declaration</license>

	<url type="repository">https://github.com/UniversalRobots/Universal_Robots_ROS2_Driver</url>

	<buildtool_depend>ament_cmake</buildtool_depend>
	<buildtool_depend>rosidl_default_generators</buildtool_depend>
	<buildtool_depend>ament_cmake_python</buildtool_depend>

	<depend>controller_manager</depend>
	<depend>controller_manager_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>hardware_interface</depend>
	<depend>pluginlib</depend>
	<depend>rclcpp</depend>
	<depend>rclcpp_lifecycle</depend>
	<depend>rclpy</depend>
	<depend>std_msgs</depend>
	<depend>std_srvs</depend>
	<depend>tf2_geometry_msgs</depend>
	<depend>ur_client_library</depend>
	<depend>ur_controllers</depend>
	<depend>ur_dashboard_msgs</depend>
	<depend>ur_description</depend>
	<depend>ur_msgs</depend>
	<depend>trajectory_msgs</depend>

	<exec_depend>rosidl_default_runtime</exec_depend>
	<exec_depend>onrobot_rg_modbus_tcp</exec_depend>
	<exec_depend>onrobot_rg_control</exec_depend>
	<exec_depend>force_torque_sensor_broadcaster</exec_depend>
	<exec_depend>joint_state_broadcaster</exec_depend>
	<exec_depend>joint_state_publisher</exec_depend>
	<exec_depend>joint_trajectory_controller</exec_depend>
	<exec_depend>launch</exec_depend>
	<exec_depend>launch_ros</exec_depend>
	<exec_depend>position_controllers</exec_depend>
	<exec_depend>robot_state_publisher</exec_depend>
	<exec_depend>ros2_controllers_test_nodes</exec_depend>
	<exec_depend>rviz2</exec_depend>
	<exec_depend>socat</exec_depend>
	<exec_depend>urdf</exec_depend>
	<exec_depend>velocity_controllers</exec_depend>
	<exec_depend>xacro</exec_depend>

	<test_depend>docker.io</test_depend>
	<test_depend>launch_testing_ament_cmake</test_depend>
	<test_depend>python3-pytest</test_depend>

	<export>
		<build_type>ament_python</build_type>
	</export>
</package>

<!--
<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>package_name</name>
	<version>0.0.0</version>
	<description>TODO: Package description</description>
	<maintainer email="63185643+dau501@users.noreply.github.com">cobot</maintainer>
	<license>TODO: License declaration</license>

	<url type="repository">https://github.com/UniversalRobots/Universal_Robots_ROS2_Driver</url>

	<buildtool_depend>ament_cmake</buildtool_depend>
	<buildtool_depend>ament_cmake_python</buildtool_depend>

	<depend>controller_manager</depend>
	<depend>controller_manager_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>hardware_interface</depend>
	<depend>pluginlib</depend>
	<depend>rclcpp</depend>
	<depend>rclcpp_lifecycle</depend>
	<depend>rclpy</depend>
	<depend>std_msgs</depend>
	<depend>std_srvs</depend>
	<depend>tf2_geometry_msgs</depend>
	<depend>ur_client_library</depend>
	<depend>ur_controllers</depend>
	<depend>ur_dashboard_msgs</depend>
	<depend>ur_description</depend>
	<depend>ur_msgs</depend>
	<depend>trajectory_msgs</depend>

	<exec_depend>force_torque_sensor_broadcaster</exec_depend>
	<exec_depend>joint_state_broadcaster</exec_depend>
	<exec_depend>joint_state_publisher</exec_depend>
	<exec_depend>joint_trajectory_controller</exec_depend>
	<exec_depend>launch</exec_depend>
	<exec_depend>launch_ros</exec_depend>
	<exec_depend>position_controllers</exec_depend>
	<exec_depend>robot_state_publisher</exec_depend>
	<exec_depend>ros2_controllers_test_nodes</exec_depend>
	<exec_depend>rviz2</exec_depend>
	<exec_depend>socat</exec_depend>
	<exec_depend>urdf</exec_depend>
	<exec_depend>velocity_controllers</exec_depend>
	<exec_depend>xacro</exec_depend>

	<test_depend>docker.io</test_depend>
	<test_depend>launch_testing_ament_cmake</test_depend>
	<test_depend>python3-pytest</test_depend>

	<export>
		<build_type>ament_python</build_type>
	</export>
</package>
-->
